# live_prices_validation

./: CODEOWNERS  Dockerfile  Dockerfile.lint  Jenkinsfile  Makefile  README.md  codeguard  docker-compose.lint.yml  docker-compose.yml  project.config  pyproject.toml
airflow/dags/: live_prices_validation.py
airflow/resources/production/secrets/: live-prices-validation-secret.plain.yaml
live_prices_validation/: app.py  common_exception.py  common_types.py  common_utils.py  config.py  main.py  thot_connector.py  toto.py
live_prices_validation/api/: main.py  routes.py
live_prices_validation/connectors/: teams_connector.py  thot_connector.py
live_prices_validation/routes/: __init__.py  get_live_prices.py  validate_prices.py
live_prices_validation/routine/: main.py
live_prices_validation/routine/connectors/: teams_connector.py  thot_connector.py
