[tool.poetry]
name = "live-prices-validation"
version = "0.1.0"
description = ""
authors = ["Leos Julien <leos.julien@elmy.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
pendulum = "^3.1.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
